# rustgodot

./: .gitignore
client/: Authentication.tscn  MainScene.tscn  icon.svg.import  project.godot
client/Scenes/: Authentication.tscn  CharacterSelect.tscn  CreateCharacter.tscn  Dungeon.tscn  Enemy.tscn  MainScene.tscn  Player.tscn  PlayerContainer.tscn  player_container.tscn
client/Scripts/: Authentication.gd  CharacterSelect.gd  CreateCharacter.gd  Globals.gd  MainScene.gd  UserData.gd  player_container.gd
client/game_assets/characters/: elf_m_hit_anim_f0.png.import  elf_m_idle_anim_f1.png.import  elf_m_run_anim_f0.png.import  imp_idle_anim_f1.png.import  imp_idle_anim_f2.png.import  imp_idle_anim_f3.png.import  imp_run_anim_f2.png.import  imp_run_anim_f3.png.import  knight_m_hit_anim_f0.png.import  knight_m_idle_anim_f0.png.import  knight_m_idle_anim_f1.png.import  knight_m_idle_anim_f2.png.import  knight_m_idle_anim_f3.png.import  knight_m_run_anim_f0.png.import  knight_m_run_anim_f1.png.import  knight_m_run_anim_f2.png.import  knight_m_run_anim_f3.png.import  lizard_m_hit_anim_f0.png.import  lizard_m_idle_anim_f0.png.import  lizard_m_idle_anim_f1.png.import  lizard_m_idle_anim_f2.png.import  lizard_m_idle_anim_f3.png.import  lizard_m_run_anim_f0.png.import  lizard_m_run_anim_f1.png.import  lizard_m_run_anim_f2.png.import  lizard_m_run_anim_f3.png.import  (+9 more)
firebase/: .firebaserc  .gitignore  firebase.json
firebase/api/: .dockerignore  .gcloudignore  Dockerfile  README.md  main.py  requirements.txt
firebase/api/app/: main.py  (+1 more)
firebase/functions/: index.js
firebase/ui/: package-lock.json  package.json
godot/: MainScene.tscn
godot/.godot/: .extension_list.cfg  extension_list.cfg
rustcode/: Cargo.toml
rustcode/client/: Cargo.toml
rustcode/client/src/: lib.rs  main.rs
rustcode/common/: Cargo.toml
rustcode/common/src/: lib.rs
rustcode/server/: Cargo.toml
rustcode/server/src/: lib.rs  main.rs
rustcode/src/: client_gd.rs  lib.rs  player.rs  server_gd.rs
server/: MainScene.tscn  ext.gdextension  icon.svg.import  project.godot  set_fps.gd
server/Scenes/: Player.tscn
web/api/: README.md
(+25 files in other folders)
