[package]
name = "rustcode"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "client"]

[dependencies]
godot = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Own packages
server = { path = "server" }
client = { path = "client" }
common = { path = "common" }
bincode = "1.3.3"
ringbuffer = "0.15.0"
renet = "1.0.0"
itertools = "0.14.0"

[lib]
crate-type = ["cdylib"]
