[package]
name = "rustcode"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "server",
    "client"
]

[dependencies]
bincode = "1.3.3"
godot = "0.2.3"
godot_tokio = "0.3.0"
itertools = "0.14.0"
renet = "1.0.0"
ringbuffer = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Own packages
server ={ path = "server"}
client ={ path = "client"}
common ={ path = "common"}

[lib]
crate-type = ["cdylib"]
