[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
renet = "1.0.0"
renet_netcode = "1.0.0"
renet_visualizer = "1.0.0"
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
