[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
renet = "1.0.0"
renet_netcode = "1.0.0"
renet_visualizer = "1.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

common = {path="../common"}
ringbuffer = "0.15.0"
